<resources>
    <string name="app_name">Grocery App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_number">Enter your Number</string>
    <string name="login_or_create_account">Login or Create a New Account</string>
    <string name="send">SEND</string>
    <string name="resent_otp">Resent OTP</string>
    <string name="time">00 : 30</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="check_otp">Please check OTP send to your Phone Number</string>
    <string name="email">Email address</string>
    <string name="full_name">Full name*</string>
    <string name="tell_us_about">Tell us about your self!</string>
    <string name="next">Next</string>
    <string name="back">back</string>
    <string name="product_name">product name</string>
    <string name="prise">Prise per Kg</string>
    <string name="_0">0</string>
    <string name="uint">unit</string>
    <string name="add_toCart">Add to cart</string>
    <string name="shipping_time">09AM -11AM,12PM-2PM,3PM-5PM</string>

    <string name="about_this_product">About this product</string>
    <string name="about">An elegant jug to keep you just an arm distance away from water</string>
</resources>